kubernetes/apps/app-cluster/productivity/linkwarden/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkwarden
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/hostname: linkwarden.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Bookmark and knowledge archive"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - productivity"
    gethomepage.dev/href: "https://linkwarden.krapulax.dev"
    gethomepage.dev/icon: "linkwarden.png"
    gethomepage.dev/name: "Linkwarden"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - linkwarden.krapulax.dev
  rules:
    - backendRefs:
        - name: linkwarden-app
          namespace: productivity
          port: 80
